--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tesseract.js": "^5.0.4"
   },
   "scripts": {
-    "dev": "tsx --watch src/server.ts"
+    "dev": "tsx --watch src/server.ts",
+    "build": "tsc src/server.ts",
+    "start": "tsx src/server.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -26,5 +28,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "type": "module"
 }
